added images to events endpoints, also added additional security filter for geodata service